--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,25 @@ Package: applepie
 Title: Client to Access the 'R-Universe' 'API'
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "Maëlle",
-           family = "Salmon",
+    person(given = "Umair",
+           family = "Durrani",
            role = c("cre", "aut"),
-           email = "msmaellesalmon@gmail.com",
+           email = "udurrani@presagegroup.com",
            comment = c(ORCID = "0000-0002-2815-0399"))
 Description: Client to access the 'R-Universe' 'API', but also example
     package for a tutorial.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
-URL: https://github.com/maelle/applepie
-BugReports: https://github.com/maelle/applepie/issues
+RoxygenNote: 7.3.2
+URL: https://github.com/udurraniAtPresage/applepie
+BugReports: https://github.com/udurraniAtPresage/applepie/issues
 Imports: 
     httr,
-    jsonlite
+    httr2,
+    jsonlite,
+    tibble,
+    withr
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
