--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,6 @@ Imports:
     tibble,
     withr
 Suggests:
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    vcr (>= 0.6.0)
 Config/testthat/edition: 3
